--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Changes for Console Interface Module
 
+0.002 2015/10/19
+  - Change module from Console to TestTools::Console
+
 0.001 2015/10/19
   - Initial version
